# Congress-DB

./: .env.example  .gitignore  .neon  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
congress_db/: api_catalog.py  api_catalog_render.py  api_client.py  backfill.py  benchmark.py  data_completeness.py  db.py  dead_letter_retry.py  endpoints.py  evaluate_session_groups.py  incremental_plan.py  ingest_bills.py  ingest_command.py  ingest_meetings.py  ingest_members.py  ingest_state.py  ingest_utterances.py  ingest_votes.py  meeting_id.py  migration_readiness.py  minutes_web_list.py  progress.py  sanity_check.py  scrape_minutes.py  session_groups.py  utterance_mapping_quality.py  validate_minutes_dom.py  validate_session_groups.py
db/: schema.sql
docs/: API-CATALOG.md  CONGRESS-SDK-CODEX-BRIEF.md  DATA-COMPLETENESS.md  DECISIONS.md  ERD.md  HOSTED-POSTGRES-MIGRATION.md  IA.md  INCREMENTAL-DRY-RUN-2026-06-04.md  MEETINGS-PARALLEL-BENCHMARK.md  MIGRATION-READINESS.md  MINUTES-DOM-VALIDATION.md  MINUTES-WEB-COVERAGE.md  MINUTES-WEB-LIST-DOM.md  PARALLEL-BENCHMARK.md  PRD.md  PRE-MIGRATION-BACKFILL-GATE.md  SANITY-CHECK.md  SESSION-GROUP-AGENT-REVIEW.md  SESSION-GROUP-EVAL.md  SESSION-GROUPS-CALIBRATION.md  SUPABASE-MIGRATION.md  VOTES-PARALLEL-BENCHMARK.md
scripts/: backfill_bill_documents.py  backfill_bill_final_outcomes.py  backfill_bill_source_aliases.py  backfill_speaker_roles.py  data_completeness.py  evaluate_session_groups.py  ingest.py  ingest_backfill.py  ingest_bills.py  (+16 more)
(+162 files in other folders)
